more changes from java 11 to 8 and some fixes